# Darely

./: Cargo.toml  README.md  dfx.json
scripts/: deploy_bot.sh
src/: lib.rs  memory.rs  router.rs  state.rs
src/darely_bot_backend/: Cargo.toml
src/darely_bot_backend/src/: lib.rs  llm.rs  state.rs  types.rs
src/router/: commands.rs  definition.rs
